@@ -1,13 +1,13 @@
 use strict; use warnings;
 BEGIN {
-  use Config;
-  if($^O eq 'openbsd' && !$Config{usethreads} && Alien::FFI->install_type eq 'system')
-  {
-    print "Configuration not supported.\n";
-    print "Please reinstall Alien::FFI with ALIEN_FORCE=1\n";
-    print "See https://github.com/plicease/FFI-Platypus/issues/19\n";
-    exit 0;
-  }
+  #use Config;
+  #if($^O eq 'openbsd' && !$Config{usethreads} && do { require Alien::FFI; Alien::FFI->install_type eq 'system'})
+  #{
+  #  print "Configuration not supported.\n";
+  #  print "Please reinstall Alien::FFI with ALIEN_FORCE=1\n";
+  #  print "See https://github.com/plicease/FFI-Platypus/issues/19\n";
+  #  exit 0;
+  #}
   unless(eval q{ use 5.008001; 1}) {
     print "Perl 5.008001 or better required\n";
     exit;
