@@ -17,14 +17,14 @@ diag          = +PkgConfig
 irc           = irc://irc.perl.org/#native
 travis_status = 1
 
-preamble = | use Config;
-preamble = | if($^O eq 'openbsd' && !$Config{usethreads} && do { require Alien::FFI; Alien::FFI->install_type eq 'system'})
-preamble = | {
-preamble = |   print "Configuration not supported.\n";
-preamble = |   print "Please reinstall Alien::FFI with ALIEN_FORCE=1\n";
-preamble = |   print "See https://github.com/plicease/FFI-Platypus/issues/19\n";
-preamble = |   exit 0;
-preamble = | }
+preamble = | #use Config;
+preamble = | #if($^O eq 'openbsd' && !$Config{usethreads} && do { require Alien::FFI; Alien::FFI->install_type eq 'system'})
+preamble = | #{
+preamble = | #  print "Configuration not supported.\n";
+preamble = | #  print "Please reinstall Alien::FFI with ALIEN_FORCE=1\n";
+preamble = | #  print "See https://github.com/plicease/FFI-Platypus/issues/19\n";
+preamble = | #  exit 0;
+preamble = | #}
 
 
 diag_preamble = | $post_diag = sub {
