@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Remove check for Threaded Perl / OpenBSD, as the issue there has been reported fixed
 
 0.44      2016-10-20 14:31:23 -0400
   - You can now control which implementation of strdup FFI::Platypus::Memory uses
